# dendritic_segment_model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
dendrite/: __init__.py  parameters.py  segment.py  simulation.py  synapse.py
examples/: run_simulation.py
tests/: test_segment.py
